<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/educational_system_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/educational_system_section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="12dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:text="@string/function_menu_educational_system_title"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/educational_system_section_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/educational_system_section_title">
            <edu.neu.campusassistant.view.FunctionButton
                android:id="@+id/education_system_foster_plan"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                app:fb_src="@drawable/ic_study_life_develop_plan"
                app:fb_text="@string/education_system_foster_plan"
                app:fb_text_size="12sp"
	            app:fb_intent_activity=".activity.aao.DevelopPlanActivity"/>
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/education_system_test"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_study_life_test_agenda"
		        app:fb_text="@string/education_system_test"
		        app:fb_text_size="12sp"
		        app:fb_intent_activity=".activity.aao.ExamAgendaListActivity"/>
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/education_system_class_list"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_study_life_check_classes"
		        app:fb_text="@string/education_system_class_list"
		        app:fb_text_size="12sp"
		        app:fb_intent_activity=".activity.aao.CourseTableActivity"/>
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/education_system_empty_classroom"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_study_life_empty_classroom"
		        app:fb_text="@string/education_system_empty_classroom"
		        app:fb_text_size="12sp"
		        app:fb_intent_activity=".activity.aao.EmptyClassroomActivity"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/educational_system_section_line1">
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/education_system_grade"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_study_life_search_grade"
		        app:fb_text="@string/education_system_grade"
		        app:fb_text_size="12sp"
		        app:fb_intent_activity=".activity.aao.GradeListActivity"/>
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/education_system_score"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_study_life_credit"
		        app:fb_text="@string/education_system_score"
		        app:fb_text_size="12sp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="2"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/library_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/library_section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="12dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:text="@string/function_menu_library_title"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/library_section_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/library_section_title">
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/library_find_book"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_library_search"
		        app:fb_text="@string/library_find_book"
		        app:fb_text_size="12sp"/>
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/library_mine_info"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_library_info"
		        app:fb_text="@string/library_mine_info"
		        app:fb_text_size="12sp"/>
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/library_borrow_list"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_library_my_borrowing"
		        app:fb_text="@string/library_borrow_list"
		        app:fb_text_size="12sp"/>
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/library_borrow_history"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_library_history"
		        app:fb_text="@string/library_borrow_history"
		        app:fb_text_size="12sp"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ecard_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/ecard_section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="12dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:text="@string/function_menu_ecard_title"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/school_card_section_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/ecard_section_title">
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/ecard_mine_info"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_ecard_info"
		        app:fb_text="@string/ecard_mine_info"
		        app:fb_text_size="12sp"/>
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/ecard_deposit_info"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_ecard_balance"
		        app:fb_text="@string/ecard_deposit_info"
		        app:fb_text_size="12sp"/>
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/ecard_consume_info"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_ecard_consumption"
		        app:fb_text="@string/ecard_consume_info"
		        app:fb_text_size="12sp"/>
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/ecard_report_loss"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_ecard_report"
		        app:fb_text="@string/ecard_report_loss"
		        app:fb_text_size="12sp"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/campus_service_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/campus_service_section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="12dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:text="@string/function_menu_campus_service"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/campus_service_section_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/campus_service_section_title">
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/campus_service_CET"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_service_cet"
		        app:fb_text="@string/campus_service_CET"
		        app:fb_text_size="12sp"/>
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/campus_service_express"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_service_delivery"
		        app:fb_text="@string/campus_service_express"
		        app:fb_text_size="12sp"/>
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/campus_service_lost_and_found"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_service_lost"
		        app:fb_text="@string/campus_service_lost_and_found"
		        app:fb_text_size="12sp"/>
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/campus_service_calender"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_service_calendar"
		        app:fb_text="@string/campus_service_calender"
		        app:fb_text_size="12sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/campus_service_section_line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/campus_service_section_line1">
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/campus_service_map"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_service_map"
		        app:fb_text="@string/campus_service_map"
		        app:fb_text_size="12sp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="3"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/social_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <RelativeLayout
            android:id="@+id/social_section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="12dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:text="@string/function_menu_social_title"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/social_section_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/social_section_title">
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/social_assosiation"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_study_life_check_classes"
		        app:fb_text="@string/social_assosiation"
		        app:fb_text_size="12sp"/>
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/social_class"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_study_life_check_classes"
		        app:fb_text="@string/social_class"
		        app:fb_text_size="12sp"/>
	        <edu.neu.campusassistant.view.FunctionButton
		        android:id="@+id/social_ad"
		        android:layout_width="0dp"
		        android:layout_height="64dp"
		        android:layout_weight="1"
		        app:fb_src="@drawable/ic_study_life_check_classes"
		        app:fb_text="@string/social_ad"
		        app:fb_text_size="12sp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>