<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
				xmlns:wheel="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/drawer_profile_section"
        android:layout_width="match_parent"
        android:layout_height="96dp">
	    <ImageView
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:src="@drawable/drawer_wallpaper"
		    android:scaleType="center"/>
	    <View
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:background="@color/colorTransparentBlack"/>
	    <de.hdodenhof.circleimageview.CircleImageView
		    android:id="@+id/profile_icon"
		    android:layout_width="56dp"
		    android:layout_height="56dp"
		    android:scaleType="centerCrop"
		    android:layout_margin="12dp"
		    android:layout_centerVertical="true"
		    android:src="@drawable/default_profile_icon"/>
	    <RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_toRightOf="@+id/profile_icon"
		    android:layout_centerVertical="true">
		    <TextView
			    android:id="@+id/user_name"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textColor="@color/colorWhite"
			    android:textSize="20sp"
			    android:textStyle="bold"
			    android:text="用户名"/>
		    <TextView
			    android:id="@+id/user_info"
			    android:layout_below="@+id/user_name"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="6dp"
			    android:textColor="@color/colorWhite"
			    android:textSize="14sp"
			    android:text="软件学院 软件工程 20132037"/>
	    </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drawer_profile_section"
	    android:orientation="vertical">
	    <LinearLayout
		    android:id="@+id/drawer_personal_account_section"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    android:paddingBottom="8dp">
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical"
			    android:layout_marginLeft="16dp"
			    android:layout_marginBottom="12dp"
			    android:textColor="@color/colorgray"
			    android:textSize="14sp"
			    android:text="@string/profile_account_title"/>
		    <RelativeLayout
			    android:id="@+id/account_education_system"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:padding="16dp"
			    android:clickable="true"
			    android:background="@drawable/card_foreground">
			    <TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_centerVertical="true"
				    android:textSize="16sp"
				    android:textColor="@color/colorBlack"
				    android:text="@string/account_education_system"/>
			    <TextView
				    android:id="@+id/account_education_system_bind"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_alignParentRight="true"
				    android:background="@color/colorClear"
				    android:textColor="@color/colorAccent"
				    android:layout_centerVertical="true"
				    android:textSize="12sp"
				    android:text="已绑定"/>
		    </RelativeLayout>
		    <RelativeLayout
			    android:id="@+id/account_library"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:padding="16dp"
			    android:clickable="true"
			    android:background="@drawable/card_foreground">
			    <TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_centerVertical="true"
				    android:textSize="16sp"
				    android:textColor="@color/colorBlack"
				    android:text="@string/account_library"/>
			    <TextView
				    android:id="@+id/account_library_bind"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_alignParentRight="true"
				    android:layout_centerVertical="true"
				    android:textColor="@color/colorAccent"
				    android:background="@color/colorClear"
				    android:textSize="12sp"
				    android:text="已绑定"/>
		    </RelativeLayout>
		    <RelativeLayout
			    android:id="@+id/account_ecard"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:padding="16dp"
			    android:clickable="true"
			    android:background="@drawable/card_foreground">
			    <TextView
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_centerVertical="true"
				    android:textSize="16sp"
				    android:textColor="@color/colorBlack"
				    android:text="@string/account_ecard"/>
			    <TextView
				    android:id="@+id/account_ecard_bind"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_alignParentRight="true"
				    android:layout_centerVertical="true"
				    android:textColor="@color/colorgray"
				    android:background="@color/colorClear"
				    android:textSize="12sp"
				    android:text="未绑定"/>
		    </RelativeLayout>
	    </LinearLayout>
	    <View
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="@color/rippleBlack">
	    </View>
	    <LinearLayout
		    android:id="@+id/drawer_ipgw_section"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:orientation="vertical">
		    <RelativeLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="@dimen/activity_vertical_margin"
			    android:layout_marginBottom="8dp">
			    <TextView
				    android:layout_marginLeft="16dp"
				    android:layout_centerVertical="true"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:textColor="@color/colorgray"
				    android:textSize="14sp"
				    android:text="@string/profile_ipwg_title"/>
				<com.pnikosis.materialishprogress.ProgressWheel
					android:id="@+id/ipgw_progress_wheel"
					android:layout_width="30dp"
					android:layout_height="30dp"
					android:layout_centerVertical="true"
					android:layout_alignParentRight="true"
					android:layout_marginRight="20dp"
					android:visibility="invisible"
					wheel:matProg_barColor="@color/colorAccent"
					wheel:matProg_progressIndeterminate="true"/>
			    <Button
				    android:id="@+id/drawer_ipgw_connect_button"
				    android:layout_width="64dp"
				    android:layout_height="40dp"
				    android:layout_marginRight="16dp"
				    android:layout_alignParentRight="true"
				    android:layout_centerVertical="true"
				    style="@style/AppTheme.Button.Pink.Borderless"
				    android:clickable="true"
				    android:textSize="12sp"
				    android:text="连接"
				    android:elevation="2dp"/>
			    <Button
				    android:id="@+id/drawer_ipgw_disconnect_button"
				    android:layout_width="64dp"
				    android:layout_height="40dp"
				    android:layout_marginRight="4dp"
				    android:layout_centerVertical="true"
				    android:layout_toLeftOf="@id/drawer_ipgw_connect_button"
				    style="@style/AppTheme.Button.Clear.Borderless"
				    android:textSize="12sp"
				    android:text="断开"/>
		    </RelativeLayout>


		    <EditText
				android:id="@+id/drawer_ipgw_user_name_edit_text"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="16dp"
			    android:layout_marginRight="16dp"
			    android:textColorHint="@color/colorgray"
			    android:hint="@string/ipgw_user_name_placeholder"
			    android:singleLine="true"
			    android:textSize="16sp"
			    android:textColor="@color/colorBlack"/>
		    <EditText
				android:id="@+id/drawer_ipgw_password_edit_text"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="16dp"
			    android:layout_marginRight="16dp"
			    android:layout_marginTop="4dp"
			    android:textColorHint="@color/colorgray"
			    android:hint="@string/ipgw_password_placeholder"
			    android:singleLine="true"
			    android:inputType="textPassword"
			    android:textSize="16sp"
			    android:textColor="@color/colorBlack"/>
	    </LinearLayout>
	    <View
		    android:layout_width="match_parent"
		    android:layout_height="1dp"
		    android:background="@color/rippleBlack"/>
    </LinearLayout>
</RelativeLayout>